# crumb

./: .gitignore  LICENSE  README.md
firmware/crumb_V0_test/i2s_es7210_tdm/: sdkconfig  sdkconfig.old
firmware/crumb_V0_test/i2s_es7210_tdm/main/: CMakeLists.txt  i2s_es7210_record_example.c  i2s_es7210_record_example2.c  idf_component.yml
firmware/crumb_V0_test/i2s_es8311/: sdkconfig  sdkconfig.old
firmware/crumb_V1_esp_idf/: .mcp.json  CMakeLists.txt  mcp_wrapper.py
firmware/crumb_V1_esp_idf/esp32_debug_mcp/: mcp_ext.py  mcp_ext_origin.py
firmware/crumb_V1_esp_idf/main/: CMakeLists.txt  main.c  main1.c  main2.c  main3.c
hardware/crumb_v1/: ProDoc_Crumb_V1_2026-06-22.epro
software/: .env.example  README.md  install-services.sh  process_audio.py  run.sh  serve.sh  server.py  setup.sh  stop.sh  sync-github.sh  transcribe_deepgram.py  uninstall-services.sh
software/rnnoise/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool  rnnoise.pc
software/rnnoise/.libs/: librnnoise.la  librnnoise.lai
software/rnnoise/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2
software/rnnoise/examples/: input.raw  output.raw
software/rnnoise/src/.deps/: nnet.Plo  (+17 more)
software/uploads/: REC_20260620_202939_2s.txt  REC_20260620_203000_3s.txt  REC_20260620_205725_4s.deepgram.json  REC_20260620_205725_4s.deepgram.txt  REC_20260620_205725_4s.txt  REC_20260620_211337_8s.deepgram.json  REC_20260620_211352_6s.txt  REC_20260621_161244_15s.deepgram.json  REC_20260621_161244_15s.deepgram.txt  REC_20260621_161244_15s.txt
(+3 files in other folders)
